--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-I wrote this tool to help a friend adapt an HDR tool ('Photomatrix')
+I wrote this tool to help a friend adapt an HDR tool ('Photomatix')
 to making time-lapse sequences.  It's entirely general, so it may be
 adaptable to other situations as well.
 
